# hbot

./: README.md  main.py  pyproject.toml
src/: bot.py
