[tool.poetry]
name = "hbot"
version = "1.0.0"
description = "Enforcing h in the h server."
authors = ["vcokltfre <vcokltfre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
corded = "^1.3.7"
python-dotenv = "^0.18.0"
loguru = "^0.5.3"
taskipy = "^1.8.1"

[tool.poetry.dev-dependencies]

[tool.taskipy.tasks]
start = "python3 main.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
